--- a/Templates/page-template.html
+++ b/Templates/page-template.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-<base href=".">
+<base href="../..">
 <title>Operator Theory and Approximation 2024</title>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/main.css"/>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/navigation.css"/>
@@ -39,21 +39,11 @@
 	</div>
 	</div>
 </td>
-<td class="navigation">
-	<div class="dropdown">
-	<button class="dropbtn">Registration</button>
-	<div class="dropdown-content">
-	<a href="index.html">Opens December 01, 2023</a>
-	</div>
-	</div>
+<td class="navigation" title="Opens December 1, 2023">
+	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
-	<div class="dropdown">
-	<button class="dropbtn">Abstract<br>submission</button>
-	<div class="dropdown-content">
-	<a href="index.html">Opens December 01, 2023</a>
-	</div>
-	</div>
+	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
@@ -75,19 +65,7 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h2>What is This Website?</h2>
-    <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p>
-
-<!---   PAGE FOOT   --------------------------->
-
-<footer>
-	<a href="http://arxiv.org/abs/1204.5141" target=_blank">
-	<img style="width: 36px; height: 40px;" alt="" src="Images/Tux.png">
-	</a>
-</footer>
+<h3>This site is not yet available</h3>
 
 </body>
 </html>
