--- a/Templates/page-template.html
+++ b/Templates/page-template.html
@@ -39,11 +39,11 @@
 	</div>
 	</div>
 </td>
-<td class="navigation" title="Opens December 1, 2023">
-	<a href="Content/registration.html">Registration</a>
+<td class="navigation">
+	<a href="Content/registration.html" title="Opens December 01, 2023">Registration</a>
 </td>
 <td class="navigation">
-	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
+	<a href="Content/abstract-submission.html" title="Opens December 01, 2023">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
