--- a/Styles/header.css
+++ b/Styles/header.css
@@ -14,7 +14,7 @@
 
 .location {
 	font-size:2.33em; 
-	color: #fafafa; 
+	color: #f5f5f5; 
 	line-height: 1.5em; 
 	width: 900px; 
 	height: 50px; 
@@ -27,3 +27,5 @@
 
 .title1{color: #b2132e; text-shadow: 1px 1px 3px #c0c0c0;} 
 .title2{color: #52739e; text-shadow: 1px 1px 3px #c0c0c0;}
+
+
