--- a/Styles/main.css
+++ b/Styles/main.css
@@ -88,11 +88,6 @@ th,td{
 
 
 
-/* Sponsor Images */
-table.sponsors{width:800px;}
-td.sponsor{white-space:nowrap; width:33%; text-align:center; vertical-align:middle; padding:0px 0px 0px 0px;}
-td.sponsor img{width: 100%}
-
 /* The Table on the Program Page */
 td.room{padding: 4px 12px 4px 4px; width: 90%; vertical-align:bottom; font-size:1.67em; color: #52739e; height:32px;}
 td.date{white-space:nowrap; width:130px; text-align:right; vertical-align:top; padding:4px 16px 0px 0px;}
@@ -107,11 +102,6 @@ table.plenary{padding-top: 8px; background: #ffffff;}
 iframe.registration{display:block; margin:1em auto 2em auto; width:700px; height:1400px; border:none;}
 iframe.directions{display:block; margin:1em auto 2em auto; width:800px; height:400px; border:none;}
 img.center{display:block; width:67%; margin:1em auto 2em auto;}
-
-/* Flyer Images */
-table.flyers{width:800px;}
-td.flyer{white-space:nowrap; width:50%; text-align:center; vertical-align:middle; padding:0px 0px 0px 0px;}
-td.sponsor img{width: 100%}
 
 footer{font-size:0.875em; margin-top:12em; text-align:center;}
 
@@ -130,6 +120,15 @@ footer{font-size:0.875em; margin-top:12em; text-align:center;}
 .dropbtn {
   background-color: #fafafa;
   color: #b8860b;
+  text-decoration: none;
+  padding: 16px;
+  font-size: 1em;
+  border: none;
+}
+
+.dropbtn-current {
+  background-color: #fafafa;
+  color: #52739e;
   text-decoration: none;
   padding: 16px;
   font-size: 1em;
@@ -164,5 +163,19 @@ footer{font-size:0.875em; margin-top:12em; text-align:center;}
 
 .dropdown:hover .dropbtn {color: #b2132e;}
 
+
+
+.showup {
+    width: 100px;
+    height: 100px;
+}
+
+.click {
+    color: #b8860b;
+    text-decoration:none;
+    cursor: pointer;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 
