--- a/Styles/header (copy)-alt.css
+++ b/Styles/header (copy)-alt.css
@@ -14,13 +14,14 @@
 
 .location {
 	font-size:2.33em; 
-	color: #505050; 
+	color: #f5f5f5; 
 	line-height: 1.5em; 
 	width: 900px; 
 	height: 50px; 
 	padding: 0px 27px 27px 0px; 
 	text-align: center; 
 	position: absolute; 
+	text-shadow: 0px 0px 6px #000000;
 	top: 200px;
 }
 
