--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -12,9 +12,10 @@
 <body>
 
 <footer>
-	<img style="width: 400px; height: 300px; position:relative; top:-150px; float:right;" alt=""
-	src="Images/VCB.jpg">
-	<br>
+	<img style="width: 250px; position:relative; top:-40px; float:right;" alt=""
+	src="Images/FWF.png">
+	<img style="width: 360px; height: 270px; position:relative; top:-150px; float:middle;" alt=""
+	src="Images/VCB.png">
 	<a href="http://arxiv.org/abs/1204.5141" target=_blank">
 	<img style="width: 36px; height: 40px; position:relative; top:-50px; float:left;" alt="" src="Images/Tux.png">
 	</a>
